--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,9 @@
 body {
   margin: 0;
   padding: 0;
+  width: 100vw;
+  height: 100vh;
   box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
