--- a/client/src/home/Landing.module.css
+++ b/client/src/home/Landing.module.css
@@ -1,15 +1,41 @@
 .containerLanding{
-    width: 100%;
-    height: 100%;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+h1{
+    font-family: Alegreya;
+    color: white;
+    font-size: 9rem;
+}
+
 .background{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-image: url('../images/bgHome.jpg');
+    background-size:cover;
+}
+
+.Navbar{
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    gap: 1;
     width: 100%;
-    height: 100%;
-    border: 2px solid red;
-    /* background-image: url(../images/bgHome.jpg); */
-    background-size: cover;
+}
+
+.btnContainer{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    gap: 2rem;
 }
