--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,32 +1,54 @@
 :root{
     --purple: #8234CF;
-    --green: #CCCE34;
+    --green: #a9ac29;
 }
 .container{
     width: 100%;
     height: 100%;
 }
 
-.btn{
+.btnWhite{
+    border: 0px solid transparent;
+    outline: none;
     cursor: pointer;
     appearance: none;
-    padding: .6rem 1rem;
-    font-size: 1.5rem;
+    padding: .5rem .7rem;
+    font-size: 1rem;
     font-family: Roboto Condensed;
     font-weight: 700;
     letter-spacing: .05rem;
-    border: none;
-    outline: none;
     border-radius: 22px;
     background-color: white;
-    color: black;
+    color: var(--purple);
     transition: all 250ms ease;
 }
 
-.btn:hover{
+.btnWhite:hover{
     color: white;
-    text-shadow: 1px 1px 0px black;
     background-color: var(--green);
     border-radius: 8px;
+    /* box-shadow: 1px 1px 10px 5px #cbce349b; */
+}
 
+.btnPurple{
+    border: 0px solid transparent;
+    outline: none;
+    cursor: pointer;
+    appearance: none;
+    padding: .5rem .7rem;
+    font-size: 1rem;
+    font-family: Roboto Condensed;
+    font-weight: 700;
+    letter-spacing: .05rem;
+    border-radius: 22px;
+    background-color: var(--purple);
+    color: white;
+    transition: all 200ms ease;
+}
+
+.btnPurple:hover{
+    outline: 2px solid var(--green);
+    background-color: var(--green);
+    border-radius: 8px;
+    background-color: var(--green);
 }
