--- a/client/src/home/Landing.module.css
+++ b/client/src/home/Landing.module.css
@@ -1,5 +1,8 @@
 .containerLanding{
+    width: 100%;
+    height: 100%;
     position: relative;
+ flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,7 +11,7 @@
 h1{
     font-family: Alegreya;
     color: white;
-    font-size: 9rem;
+    font-size: 7rem;
 }
 
 .background{
@@ -28,14 +31,7 @@ h1{
 .Navbar{
     display: flex;
     align-items: center;
-    justify-content:space-around;
-    gap: 1;
+    justify-content:left;
+    /* gap: 1; */
     width: 100%;
-}
-
-.btnContainer{
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    gap: 2rem;
 }
