--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content:left;
-    flex-direction: column;
+    /* flex-direction: column; */
     padding: .5rem;
 }
 
@@ -17,7 +17,7 @@ h2{
 }
 
 .formContainer{
-    background-color: white;
+    background-color: rgb(232, 232, 232);
     border-radius: 12px;
     display: flex;
     flex-direction: column;
