--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -8,6 +8,7 @@
 }
 
 .btnWhite{
+    width: 50%;
     border: 0px solid transparent;
     outline: none;
     cursor: pointer;
@@ -17,7 +18,8 @@
     font-family: Roboto Condensed;
     font-weight: 700;
     letter-spacing: .05rem;
-    border-radius: 22px;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
     background-color: white;
     color: var(--purple);
     transition: all 250ms ease;
