--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -5,52 +5,7 @@
 .container{
     width: 100%;
     height: 100%;
-}
-
-.btnWhite{
-    width: 50%;
-    border: 0px solid transparent;
-    outline: none;
-    cursor: pointer;
-    appearance: none;
-    padding: .5rem .7rem;
-    font-size: 1rem;
-    font-family: Roboto Condensed;
-    font-weight: 700;
-    letter-spacing: .05rem;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
-    background-color: white;
-    color: var(--purple);
-    transition: all 250ms ease;
-}
-
-.btnWhite:hover{
-    color: white;
-    background-color: var(--green);
-    border-radius: 8px;
-    /* box-shadow: 1px 1px 10px 5px #cbce349b; */
-}
-
-.btnPurple{
-    border: 0px solid transparent;
-    outline: none;
-    cursor: pointer;
-    appearance: none;
-    padding: .5rem .7rem;
-    font-size: 1rem;
-    font-family: Roboto Condensed;
-    font-weight: 700;
-    letter-spacing: .05rem;
-    border-radius: 22px;
-    background-color: var(--purple);
-    color: white;
-    transition: all 200ms ease;
-}
-
-.btnPurple:hover{
-    outline: 2px solid var(--green);
-    background-color: var(--green);
-    border-radius: 8px;
-    background-color: var(--green);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
