--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -4,8 +4,29 @@
     align-items: center;
     justify-content:left;
     /* flex-direction: column; */
-    padding: .5rem;
+    padding-top: 5vh;
+    padding-left: 20vw;
 }
+
+.formContainer{
+    /* outline: 1px solid var(--purple); */
+    background-color: transparent; 
+    border-radius: 8px;
+    display: flex;
+    outline: 1px solid var(--green);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding:1rem 2rem 2rem 2rem;
+    gap: 2rem;
+    transition: all 200ms ease;
+    /* margin-bottom: 1rem; */
+}
+
+.formContainer:hover{
+    outline: 1px solid var(--purple);
+}
+
 
 h2{
     color: white;
@@ -15,20 +36,6 @@ h2{
     font-family: Alegreya;
     font-weight: 700;
     /* font-size: 2rem; */
-}
-
-.formContainer{
-    /* outline: 1px solid var(--purple); */
-    background: linear-gradient(to bottom, #9d9c9c31, #827b78, #333330);
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0rem 1rem 1rem 1rem;
-    gap: 1rem;
-    /* margin-bottom: 1rem; */
 }
 
 input[type="text"], input[type="password"]{
@@ -44,9 +51,10 @@ input[type="text"], input[type="password"]{
     border-radius: 12px;
 }
 
-input:focus[type="text"], input:focus[type="password"]{
-    border: 2px solid var(--green);
-    color: var(--purple);
+input:focus[type="text"]{
+    border: 2px solid var(--purple);
+    background-color: var(--purple);
+    color: white;
     outline: none;
     appearance: none;
     padding: .5rem 1rem;
@@ -57,11 +65,37 @@ input:focus[type="text"], input:focus[type="password"]{
     border-radius: 12px;
 }
 
+::placeholder {
+    color: rgb(192, 192, 192);
+    opacity: 1; /* Firefox */
+  }
+  
+  ::-ms-input-placeholder{ /* Edge 12 -18 */
+    color:rgb(192, 192, 192);
+  }
 
-.btnContainer{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-    /* gap: 2rem; */
+
+
+.btn1{
+    width: 50%;
+    border: 0px solid transparent;
+    outline: none;
+    cursor: pointer;
+    appearance: none;
+    padding: .5rem .3rem;
+    font-size: .9rem;
+    font-family: Roboto Condensed;
+    font-weight: 700;
+    letter-spacing: .05rem;
+    border-radius: 22px;
+    background-color: var(--green);
+    color: white;
+    transition: all 200ms ease;
+}
+
+.btn1:hover{
+    color: white;
+    background-color: var(--purple);
+    border-radius: 8px;
+    /* box-shadow: 1px 1px 10px 5px #cbce349b; */
 }
