--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -65,6 +65,20 @@ input:focus[type="text"]{
     border-radius: 12px;
 }
 
+input:focus[type="password"]{
+    border: 2px solid var(--purple);
+    background-color: var(--purple);
+    color: white;
+    outline: none;
+    appearance: none;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    font-family: Roboto Condensed;
+    font-weight: 400;
+    letter-spacing: .05rem;
+    border-radius: 12px;
+}
+
 ::placeholder {
     color: rgb(192, 192, 192);
     opacity: 1; /* Firefox */
@@ -82,7 +96,7 @@ input:focus[type="text"]{
     outline: none;
     cursor: pointer;
     appearance: none;
-    padding: .5rem .3rem;
+    padding: .5rem .4rem;
     font-size: .9rem;
     font-family: Roboto Condensed;
     font-weight: 700;
