--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,15 @@
 
-body {
+*{
   margin: 0;
   padding: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  box-sizing: border-box;
+}
+
+body{
   width: 100vw;
   height: 100vh;
-  box-sizing: border-box;
   overflow-x: hidden;
   overflow-y: hidden;
 }
