--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -1,10 +1,11 @@
 
 .containerNavbar{
+    /* border: 1px solid red; */
     width: 100%;
     display: flex;
     align-items: center; 
     justify-content:left;
-    padding-left: 3rem;
+    padding-left: 5rem;
 }
 
 .containerTitle{
