--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -5,7 +5,8 @@
     display: flex;
     align-items: center; 
     justify-content:left;
-    padding-left: 5rem;
+    padding-left: 7rem;
+    padding-top: 2rem;
 }
 
 .containerTitle{
@@ -20,7 +21,7 @@
     align-items: center;
     justify-content: center;
     user-select: none;
-    font-size: 5rem;
+    font-size: 5.5rem;
     /* padding-left: 3rem; */
     font-family: Alegreya;
     color: white;
@@ -28,7 +29,7 @@
 
 .radioBtnsContainer{
     position: relative;
-    margin-left: 5rem;
+    margin-left: 7rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,6 +41,7 @@
     position: absolute;
     font-family: Roboto Condensed;
     color: var(--green);
+    font-size: 1.2rem;
     font-weight: 500;
     z-index: 5;
     gap: 1rem;
