--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -3,7 +3,8 @@
     display: flex;
     align-items: center;
     justify-content:left;
-    padding-left: 7rem;
+    padding-left: 15rem;
+    padding-top: 6rem;
 }
 
 .formContainer{
@@ -14,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding:1rem 2rem 1.5rem 2rem;
+    padding:2rem 3rem 2.5rem 3rem;
     gap: 2rem;
     animation-name: slideUp;
     animation-duration: 300ms;
