--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -5,6 +5,7 @@
     justify-content:left;
     padding-left: 15rem;
     padding-top: 6rem;
+    padding-bottom: 2rem;
 }
 
 .formContainer{
@@ -15,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding:2rem 3rem 2.5rem 3rem;
+    padding:2rem 2rem 2.5rem 2rem;
     gap: 2rem;
     animation-name: slideUp;
     animation-duration: 300ms;
