--- a/client/src/heroSection/Hero.module.css
+++ b/client/src/heroSection/Hero.module.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: left;
-    padding-top: 4rem;
+    padding-top: 2rem;
     padding-left: 15rem;
 }
 
@@ -69,5 +69,11 @@
     color: white;
     background-color: var(--purple);
     border-radius: 22px;
-  
+    transition: all 200ms ease;
+}
+
+.btn:hover{
+    color: var(--purple);
+    background-color: white;
+    border-radius: 8px;
 }
