--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -5,7 +5,7 @@
     justify-content:left;
     padding-left: 15rem;
     padding-top: 6rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;    
 }
 
 .formContainer{
@@ -16,7 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding:2rem 2rem 2.5rem 2rem;
+    padding:2rem 2rem 2rem 2rem;
     gap: 2rem;
     animation-name: slideUp;
     animation-duration: 300ms;
@@ -30,7 +30,8 @@
 }
 
 .menuContainer{
-    padding-top: 1rem;
+    padding-top: .5rem;
+    padding-bottom: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -147,7 +148,7 @@ input:focus[type="password"]{
     cursor: pointer;
     appearance: none;
     padding: .5rem .7rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-family: Roboto Condensed;
     font-weight: 700;
     letter-spacing: .05rem;
