--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -22,7 +22,7 @@
     justify-content: center;
     user-select: none;
     font-size: 6rem;
-    font-weight: 900;
+    font-weight: 700;
     letter-spacing: .2rem;
     padding-right: 2rem;
     /* padding-left: 3rem; */
@@ -44,7 +44,8 @@
     position: absolute;
     font-family: Roboto Condensed;
     color: var(--green);
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    letter-spacing: .1rem;
     font-weight: 500;
     z-index: 5;
     gap: 2rem;
