--- a/client/src/heroSection/Hero.module.css
+++ b/client/src/heroSection/Hero.module.css
@@ -1,11 +1,11 @@
 .container{
-    width: 100%;
-    display: flex;
+    width: 50%;
+    display: block;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: left;
-    padding-top: 2rem;
-    padding-left: 15rem;
+    padding-top: 3rem;
+    /* padding-left: 15rem; */
 }
 
 .hero{
