--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -2,8 +2,8 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content:left;
-    padding-left: 15rem;
+    justify-content:center;
+    /* padding-left: 15rem; */
     padding-top: 6rem;
     padding-bottom: 1rem;    
 }
