--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -4,8 +4,9 @@
     width: 100%;
     display: flex;
     align-items: center; 
-    justify-content:left;
+    justify-content:space-between;
     padding-left: 7rem;
+    padding-right: 7rem;
     padding-top: 2rem;
 }
 
