--- a/client/src/heroSection/Hero.module.css
+++ b/client/src/heroSection/Hero.module.css
@@ -2,7 +2,7 @@
     width: 50%;
     display: block;
     flex-direction: column;
-    /* align-items: center; */
+    align-items:left;
     justify-content: left;
     padding-top: 3rem;
     /* padding-left: 15rem; */
@@ -14,7 +14,6 @@
     align-items: center;
     justify-content:left; 
     gap: 2rem;
-  
 }
 
 .text1{
