--- a/client/src/heroSection/Hero.module.css
+++ b/client/src/heroSection/Hero.module.css
@@ -1,11 +1,12 @@
 .container{
-    width: 50%;
+    width: 75%;
     display: block;
     flex-direction: column;
     align-items:left;
     justify-content: left;
-    padding-top: 3rem;
-    /* padding-left: 15rem; */
+    padding-top: 5rem;
+    padding-right: 2%;
+    transform: translateX(-5rem);
 }
 
 .hero{
@@ -27,7 +28,8 @@
 }
 
 .text2{
-    display: block;  
+    position: relative;
+    display: flex;  
     align-items: center;
     justify-content: left;
     flex-direction: column;
@@ -43,12 +45,14 @@
 }
 
 .btnContainer{
+    transform: translate(10rem, 5rem);
+    position: absolute;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
     padding-top: 1.5rem;
-    padding-left: 34rem;
+    /* padding-left: 34rem; */
 }
 
 .btn{
