--- a/client/src/heroSection/Hero.module.css
+++ b/client/src/heroSection/Hero.module.css
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: center;
     font-family: Alegreya;
-    font-size: 6rem;
+    font-size: 5rem;
     font-weight: 900;
     color: var(--green);   
 }
@@ -75,7 +75,7 @@
 }
 
 .btn:hover{
-    color: var(--purple);
-    background-color: white;
+    color: var(--green);
+    background-color: black;
     border-radius: 8px;
 }
