--- a/client/src/heroSection/Hero.module.css
+++ b/client/src/heroSection/Hero.module.css
@@ -1,56 +1,83 @@
 .container{
-    width: 75%;
-    display: block;
+    /* border: 3px solid red; */
+    position: absolute;
+    z-index: 0;
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    top: 0;
+    left: 0;
+    align-items:center;
+    justify-content: center; 
     flex-direction: column;
-    align-items:left;
-    justify-content: left;
-    padding-top: 5rem;
+    background: linear-gradient(to left, #00000000, #333 80%, #333 90%);
+   
+    /* padding-top: 5rem;
     padding-right: 2%;
-    transform: translateX(-5rem);
+    transform: translateX(-5rem); */
 }
 
 .hero{
+    /* border: 2px solid red; */
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center; 
+    padding-left: 4rem;
+    gap: 2rem;
+}
+
+.sub{
     display: flex;
     align-items: center;
-    justify-content:left; 
+    justify-content:right;
+    font-family: Alegreya;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--green)
+}
+
+.text{
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    flex-direction: column;
     gap: 2rem;
 }
 
 .text1{
-    display: block;
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     font-family: Alegreya;
     font-size: 5rem;
-    font-weight: 900;
+    font-weight: 700;
     color: var(--green);   
+    padding-left: 4rem;
+    line-height: 4.8rem;
 }
 
 .text2{
-    position: relative;
-    display: flex;  
+    display: flex;
     align-items: center;
-    justify-content: left;
-    flex-direction: column;
+    justify-content: center;
     font-family: Alegreya;
-    font-size: 3rem;
-    font-weight: 600;
+    font-size: 3.5rem;
+    font-weight: 700;
     color: white;   
-    text-align: left;
 }
 
-.text3{
-    font-size: 4rem;
-}
 
 .btnContainer{
-    transform: translate(10rem, 5rem);
-    position: absolute;
+    /* transform: translate(10rem, 5rem); */
+    /* position: absolute; */
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
     padding-top: 1.5rem;
     /* padding-left: 34rem; */
 }
@@ -64,9 +91,9 @@
     border: 0px solid transparent;
     outline: none;
     cursor: pointer;
-    /* appearance: none; */
+    margin-left: 2rem;
     padding: .5rem .7rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: white;
     background-color: var(--purple);
