--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -18,11 +18,11 @@
     flex-direction: column;
     padding: 2rem;
     gap: 2rem;
-    background: linear-gradient(to right, #00000000, #000000c6 80%, #000000b2 90%);
+    background: linear-gradient(to right, #00000000, #000000ce 80%, #000000ba 90%);
 }
      
 .formContainer{
-    /* background-color: white;  */
+    background-color: rgba(255, 255, 255, 0.04);
     border-radius: 8px;
     display: flex;
     outline: 1px solid var(--green);
@@ -54,15 +54,54 @@
     user-select: none;
 }
 
-.labelClient{
+
+
+.userTypeLabels{
+    cursor: pointer;
     width: 100%;
+    position: absolute;
+    display: flex;
+    z-index: 5;
+    align-items: center;
+    justify-content: right;
+    font-family: Roboto Condensed;
+    color: var(--green);
+    font-size: 1.3rem;
+    letter-spacing: .1rem;
+    font-weight: 500;
+    gap: 2rem;
+}
+
+.chevronBack{
+    background-color: var(--purple);
+    border-radius: 50%;
+}
+
+.userTypeRadios{
+    display: none;
+    gap: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.userTypeRadioOption{
+    opacity: 0;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.labelClient{
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .labelRestaurant{
-    width: 100%;
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,13 +120,12 @@
 }
 
 .userActionLabels{
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     user-select: none;
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 100%;
     z-index: 10;
     gap: 2rem;
     margin-bottom: 1rem;
@@ -102,15 +140,17 @@
 }
 
 .userActionRadioOption{
+    width: 100%;
+    height: 100%;
     cursor: pointer;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     display: none;
 }
 
 .labelRegister{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
     cursor: pointer;
     padding-top: .5rem;
@@ -121,7 +161,7 @@
 }
 
 .labelLogin{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
     cursor: pointer;
     padding-top: .5rem;
@@ -238,50 +278,4 @@ input:focus[type="password"]{
 /* ************************ */
 
 
-
-.userTypeLabels{
-    width: 100%;
-    position: absolute;
-    display: flex;
-    z-index: 5;
-    align-items: center;
-    justify-content: right;
-    font-family: Roboto Condensed;
-    color: var(--green);
-    font-size: 1.3rem;
-    letter-spacing: .1rem;
-    font-weight: 500;
-    gap: 2rem;
-}
-
-.userTypeLabels label{
-    cursor: pointer;
-    color: var(--green);
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
-
-.chevronBack{
-    color: white;
-    background-color: var(--purple);
-    border-radius: 50%;
-}
-
-
-
-.userTypeRadios{
-    width: 0%;
-    gap: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.userTypeRadioOption{
-    opacity: 0;
-    cursor: pointer;
-    display: none;
-}
 
