--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -1,4 +1,5 @@
 .container{
+
     position: relative;
     display: flex;
     align-items: center;
@@ -43,14 +44,31 @@
 }
 
 
-.userTypeBtnContainer{
-    width: 100%;
-    /* border: 1px solid green; */
-    position: relative;
+.closeBtn{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    font-size: 2.2rem;
+    color: var(--purple);
+    padding: .1rem;
+    cursor: pointer;
+    width: 2.2rem;
+    height: 2.2rem;
+    border-radius: 50%;
+    transition: all 200ms ease;
+}
+
+.closeBtn:hover{
+    color: var(--green);
+    background-color: black;
+}
+
+.userTypeBtnContainer{
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
     user-select: none;
 }
 
@@ -63,7 +81,7 @@
     display: flex;
     z-index: 5;
     align-items: center;
-    justify-content: right;
+    justify-content: left;
     font-family: Roboto Condensed;
     color: var(--green);
     font-size: 1.3rem;
@@ -98,13 +116,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 250ms ease;
+    padding: .2rem .5rem;
 }
+
+.labelClient:hover{
+    background-color: black;
+    border-radius: 8px;
+
+}
+
 
 .labelRestaurant{
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: .2rem .5rem;
+}
+
+.labelRestaurant:hover{
+    background-color: black;
+    border-radius: 8px;
 }
 
 
@@ -120,6 +153,7 @@
 }
 
 .userActionLabels{
+ 
     padding-top: 1.5rem;
     user-select: none;
     display: flex;
@@ -140,6 +174,7 @@
 }
 
 .userActionRadioOption{
+
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -150,25 +185,33 @@
 }
 
 .labelRegister{
+    font-family: Roboto;
     font-size: 1.5rem;
     color: white;
     cursor: pointer;
     padding-top: .5rem;
     margin-block-start: 0;
     margin-block-end: 0;
-    font-family: Alegreya;
     font-weight: 500;
 }
 
+.labelRegister:hover{
+    color: var(--green);
+}
+
 .labelLogin{
+    font-family: Roboto;
     font-size: 1.5rem;
     color: white;
     cursor: pointer;
     padding-top: .5rem;
     margin-block-start: 0;
     margin-block-end: 0;
-    font-family: Alegreya;
     font-weight: 500;
+}
+
+.labelLogin:hover{
+    color: var(--green);
 }
 
 
