--- a/client/src/navbar/ClientCard.module.css
+++ b/client/src/navbar/ClientCard.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     /* width: 100%; */
     padding: 1rem
+
 }
 
 .card{
@@ -12,11 +13,24 @@
     color: black;
     font-size: 1.5rem;
     border-radius: 12px;
-    display: flex;
+    display: flex;  
     align-items: center;
     justify-content: center;
+    padding: 1rem ;
     gap: 1rem;
-    padding: 1rem;
-    border: 1px solid var(--green);
 }
 
+.userAvatar{  
+    border-radius: 50%;
+    padding: .2rem;
+    width: 6rem;
+    height: 6rem;
+    border: 2px solid var(--green);
+    overflow: hidden;
+}
+
+.userAvatar img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
