--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -7,15 +7,16 @@
     display: flex;
     align-items: center; 
     justify-content:space-between;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    padding-top: 1rem;
+    padding: 1rem 5rem;
+    border-bottom: 1px solid var(--green);
+    background: linear-gradient(to bottom, #b7ba1f4c 30%, #00000000) 50%;
 }
 
 .containerTypewriter{
     border-radius: 5px;
     font-size: 5rem;
     font-weight: 700;
+    text-shadow: 3px 3px var(--purple);
     color: white;
     font-family: Alegreya;
 }
