Login y register funcionales desde el front con mensajes de aviso

--- a/client/src/home/Login.module.css
+++ b/client/src/home/Login.module.css
@@ -317,6 +317,10 @@ input:focus[type="password"]{
     color: var(--purple);
 }
 
+.error {
+    color: red;
+}
+
 
 /* ************************ */
 
