--- a/client/src/navbar/RestaurantSearchBar.module.css
+++ b/client/src/navbar/RestaurantSearchBar.module.css
@@ -1,48 +1,74 @@
-.container{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-}
-
-.containerForm{
+.container {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
-}
-
-
-.inputSearch[type="text"]{
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+  }
+  
+  .form {
+    width: 100%;
+    max-width: 500px;
+  }
+  
+  .inputContainer {
+    position: relative;
+    width: 100%;
+  }
+  
+  .inputSearch {
     appearance: none;
     outline: none;
     border: none;
-    background-color:   white;
-    width: 20rem;
-    color: white;
-    /* padding: .5rem 1rem; */
+    background-color: white;
+    width: 100%; /* Asegura que el input ocupe el 100% del ancho del contenedor */
+    padding: 0.5rem 1rem;
     font-size: 1.1rem;
-    font-family: Roboto Condensed;
+    font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
-    letter-spacing: .05rem;
+    letter-spacing: 0.05rem;
     border-radius: 8px;
     transition: all 200ms ease;
-
-}
-
-.inputSearch:focus[type="text"]{
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  .inputSearch:focus {
     outline: none;
     border: none;
-    color: var(--green);
-    font-size: 1.2rem;   
-    background-color: black;
-    font-family: Roboto Condensed;
-}
-
-.btnSearch{
+    background-color: white;
+  }
+  
+  .dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0; /* Asegura que el dropdown ocupe el 100% del ancho del contenedor */
+    background-color: white;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 8px 8px;
+    max-height: 200px;
+    max-width: 400px;
+    overflow-y: auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .searchResultItem {
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+  }
+  
+  .searchResultItem:hover {
+    background-color: #f0f0f0;
+  }
+  
+  .btnSearch {
     border: none;
     outline: none;
     border-radius: 50%;
-    padding: .6rem;
+    padding: 0.6rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,10 +77,12 @@
     color: white;
     background-color: var(--purple);
     transition: all 200ms ease;
-}
-
-.btnSearch:hover{
+    margin-top: 1rem;
+  }
+  
+  .btnSearch:hover {
     border-radius: 30%;
     color: var(--green);
     background-color: black;
-}    
+  }
+  
