--- a/client/src/home/Hero.module.css
+++ b/client/src/home/Hero.module.css
@@ -9,7 +9,7 @@
     left: 0;
     align-items:center;
     justify-content: center; 
-    flex-direction: column;
+    /* flex-direction: column; */
     background: linear-gradient(to left, #00000000, #333 80%, #333 90%);
 
 }
@@ -23,6 +23,12 @@
     justify-content:center; 
     padding-left: 4rem;
     gap: 2rem;
+}
+
+.hero2{
+    display: flex;
+    align-items: center;
+    justify-content: right;
 }
 
 .sub{
