--- a/client/src/home/Landing.module.css
+++ b/client/src/home/Landing.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: relative;
- flex-direction: column;
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,6 +27,14 @@ h1{
     left: 0;
     background-image: url('../images/bgHome.jpg');
     background-size:cover;
+}
+
+.containerMiddleSection{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* padding: 2rem; */
+    gap: 1rem
 }
 
 .Navbar{
