--- a/client/src/home/Hero.module.css
+++ b/client/src/home/Hero.module.css
@@ -10,7 +10,7 @@
     align-items:center;
     justify-content: center; 
     /* flex-direction: column;   */
-    background: linear-gradient(to left, #00000000, #333 80%, #333 90%);
+    /* background: linear-gradient(to left, #00000000, #333 80%, #333 90%); */
 
 }
 
