--- a/client/src/components/reserva/MostrarReservasRestaurante.module.css
+++ b/client/src/components/reserva/MostrarReservasRestaurante.module.css
@@ -1,15 +1,24 @@
 .container{
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
+    width: 50vw;
+    height: 100vh;
 }
 
 .reservasContainer{
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 50vw;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     padding: 2rem;
-    background-color: aquamarine;
-    border-radius: 8px;
+    gap: 2rem;
+    background: linear-gradient(to right, #00000000, #000000ce 80%, #000000ba 90%);
 }
