--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -7,16 +7,17 @@
     display: flex;
     align-items: center; 
     justify-content:space-between;
-    padding: 1rem 5rem;
-    /* border-bottom: 1px solid var(--green); */
-    background: linear-gradient(to bottom, #b7ba1f4c 30%, #00000000) 50%;
+    padding: .7rem 5rem;
+    border-bottom: 1px solid var(--purple);
+    background: linear-gradient(to left, rgba(0, 0, 0, 0), #b3b6157b 30%,var(--purple),  #00000000) 50%;
+    transition: all 200ms ease;
 }
 
 .containerTypewriter{
     border-radius: 5px;
     font-size: 5rem;
     font-weight: 700;
-    /* text-shadow: 3px 3px var(--purple); */
+    text-shadow: 3px 3px var(--purple);
     color: white;
     font-family: Alegreya;
 }
