--- a/client/src/navbar/RestaurantSearchBar.module.css
+++ b/client/src/navbar/RestaurantSearchBar.module.css
@@ -23,16 +23,18 @@
     appearance: none;
     outline: none;
     border: none;
-    background-color: white;
-    /* width: 100%; */
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 8px;
+    background-color: white;border-top-left-radius: 8px;
     padding: 0.5rem 1rem;
     font-size: 1.1rem;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
     letter-spacing: 0.05rem;
-    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(240, 77, 77, 0.1);
     transition: all 200ms ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+ 
   }
   
   .inputSearch:focus {
@@ -41,7 +43,7 @@
     background-color: white;
   }
   
-  .dropdown {
+  /* .dropdown {
     width: 100%;
     position: absolute;
     top: 100%;
@@ -53,7 +55,7 @@
     overflow-y: auto;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
-  }
+  } */
   
   .searchResultItem {
     padding: 0.5rem 1rem;
@@ -65,22 +67,22 @@
   }
   
   .btnSearch {
-    border: none;
-    outline: none;
-    border-radius: 50%;
-    padding: 0.6rem;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    font-size: 2rem;
+    border: none;
+    outline: none;
+    padding: 0.45rem 1rem;
+    font-size: 1.3rem;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
     color: white;
     background-color: var(--purple);
     transition: all 200ms ease;
   }
   
   .btnSearch:hover {
-    border-radius: 30%;
     color: var(--green);
     background-color: black;
   }
