--- a/client/src/navbar/Navbar.module.css
+++ b/client/src/navbar/Navbar.module.css
@@ -8,7 +8,7 @@
     align-items: center; 
     justify-content:space-between;
     padding: .7rem 5rem;
-    border-bottom: 1px solid var(--purple);
+    /* border-bottom: 1px solid var(--purple); */
     background: linear-gradient(to left, rgba(0, 0, 0, 0), #b3b6157b 30%,var(--purple),  #00000000) 50%;
     transition: all 200ms ease;
 }
