--- a/client/src/navbar/UserCard.module.css
+++ b/client/src/navbar/UserCard.module.css
@@ -6,7 +6,7 @@
 }
 
 .card{
-    padding: .5rem 1rem ; 
+    padding: .5rem .7rem ; 
     background-color: white;
     border-radius: 12px;
     font-family: Alegreya;
@@ -23,9 +23,9 @@
 .userAvatar{  
     border-radius: 50%;
     padding: .2rem;
-    width: 6rem;
-    height: 6rem;
-    border: 2px solid var(--green);
+    width: 5rem;
+    height: 5rem;
+    border: 3px solid var(--green);
     overflow: hidden;
 }
 
