--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
 .container{
     width: 100%;
     height: 100%;
-    /* display: flex;
+    display: flex;
     align-items: center;
-    justify-content: center; */
+    justify-content: center;
 }
