--- a/client/src/home/Landing.css
+++ b/client/src/home/Landing.css
@@ -1,7 +1,6 @@
 .containerLanding{
-    /* width: 100vw;
-    height: 100vh; */
-    position: relative;
+    width: 100%;
+    height: 100%;
     flex-direction: column;
     display: flex;
     align-items: center;
