--- a/client/src/home/Login.css
+++ b/client/src/home/Login.css
@@ -1,28 +1,24 @@
-.container{
-    position: relative;
+.containerLogin{
     display: flex;
     align-items: center;
     justify-content:center;
 }
 
 .login{
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    width: 50vw;
-    height: 100vh;
+    /* width: 50vw; */
+    /* height: 100vh; */
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 2rem;
     gap: 2rem;
-    background: linear-gradient(to right, #00000000, #000000ce 80%, #000000ba 90%);
+  
+    /* background: linear-gradient(to right, #00000000, #000000ce 80%, #000000ba 90%); */
 }
      
-.formContainer{
-    background-color: rgba(255, 255, 255, 0.04);
+.loginFormContainer{
+    background-color: black;
     border-radius: 8px;
     display: flex;
     outline: 1px solid var(--green);
@@ -38,12 +34,12 @@
     transition: all 250ms ease;
 }
 
-.formContainer:hover{
+.loginFormContainer:hover{
     outline: 1px solid var(--purple);
 }
 
 
-.closeBtn{
+.loginCloseBtn{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,7 +53,7 @@
     transition: all 200ms ease;
 }
 
-.closeBtn:hover{
+.loginCloseBtn:hover{
     color: var(--green);
     background-color: black;
 }
@@ -140,7 +136,7 @@
 }
 
 
-.menuContainer{
+.loginMenuContainer{
     position: relative;
     width: 100%;    
     display: flex;
@@ -274,7 +270,7 @@ input:focus[type="password"]{
     gap: 2rem;
 }
 
-.btn1{
+.entrarBtn{
     border: 0px solid transparent;
     outline: none;
     cursor: pointer;
@@ -290,30 +286,10 @@ input:focus[type="password"]{
     transition: all 200ms ease;
 }
 
-.btn1:hover{
+.entrarBtn:hover{
     color: var(--green);
     background-color: black;
     border-radius: 8px;
-}
-
-.closeIcon{
-    position: absolute;
-    transform: translate(1.5rem, -.5rem);
-    z-index: 20;
-    width: 10%;
-    height: 100%;
-    right: 0;
-    padding: .3rem;
-    display: flex;
-    align-items: center;
-    justify-content:flex-end;
-    color: var(--green);
-    font-size: 3rem;
-    cursor: pointer;
-}
-
-.closeIcon:hover{
-    color: var(--purple);
 }
 
 .error {
