--- a/client/src/navbar/Navbar.css
+++ b/client/src/navbar/Navbar.css
@@ -8,7 +8,7 @@
     transition: all 200ms ease;
 }
 
-.containerTitle{
+.containerTitleNavbar{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,7 +36,7 @@
     padding-top: 1.5rem;
 }
 
-.btn{
+.empezarBtn{
     font-family: Roboto Condensed;
     display: flex;
     align-items: center;
@@ -56,19 +56,18 @@
     transition: all 200ms ease;
 }
 
-.btn:hover{
+.empezarBtn:hover{
     color: white;
     outline: 2px solid var(--purple);
     background-color: black;
     border-radius: 8px;
 }
 
-.logoContainer{  
+.logoContainerNavbar{  
     display: flex;
     align-items: center;
     justify-content: center; 
     border-radius: 50%;
-    /* padding: 1.5rem 1.5rem; */
     padding: .2rem;
     width: 4rem;
     height: 4rem;
@@ -76,7 +75,7 @@
     background-color: white;
 }
 
-.logoContainer img{
+.logoContainerNavbar img{
     width: 100%;
     height: 100%;
     object-fit: cover;
