--- a/client/src/home/Hero.css
+++ b/client/src/home/Hero.css
@@ -1,20 +1,28 @@
 .containerHero{
+    /* border: 2px solid pink; */
     width: 100%;
+    height: 100%;
+    margin-top: 7rem;
     display: flex;
     align-items: center;
     justify-content:center;
-    /* gap: 15rem;   */
+    overflow-y: hidden;
 }
 
-.hero1{
+.hero{
+    width: 50%;
+    height: 100%;
     display: flex;
     align-items: center;    
     justify-content:center; 
     flex-direction: column;
     gap: 3rem;
+    padding-right: 3rem;
 }
 
-.hero2{
+.heroLoadedComponents{
+    width: 50%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content:center; 
@@ -35,28 +43,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    gap: 2rem;
-}
-
-.text1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-family: Alegreya;
-    font-size: 4.5rem;
+    font-size: 4rem;
     font-weight: 600;
     color: white;   
     line-height: 4.8rem;
 }
 
-.text2{
-    display: flex;
-    align-items: center;
-    justify-content: right  ;
-    font-family: Alegreya;
-    font-size: 4.5rem;
-    font-weight: 600;
-    color: white;   
-    line-height: 4.8rem;
-}
