--- a/client/src/navbar/RestaurantSearchBar.css
+++ b/client/src/navbar/RestaurantSearchBar.css
@@ -25,7 +25,8 @@
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 8px;
-    background-color: white;border-top-left-radius: 8px;
+    background-color: white;
+    border-top-left-radius: 8px;
     padding: 0.5rem .5rem;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 400;
@@ -35,12 +36,12 @@
  
   }
   
-  .inputSearch:focus {
+  /* .inputSearch:focus {
     outline: none;
     border: none;
     background-color: white;
     outline: 1px solid var(--purple);
-  }
+  } */
 /*   
   .searchResultItem {
     padding: 0.5rem 1rem;
@@ -70,6 +71,6 @@
   .btnTrash:hover {
     color: white;
     background-color: black;
-    outline: 2px solid var(--purple);
+    outline: 1px solid var(--green);
   }
   
