css scroll restaurants

--- a/client/src/home/Landing.css
+++ b/client/src/home/Landing.css
@@ -14,7 +14,7 @@ h1{
     font-size: 6rem;
 }
 
-.background{
+.backgroundLanding{
     display: flex;
     align-items: center;
     justify-content: center;
