--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,17 +3,40 @@
     --green: #d5d811;
 }
 
-.landing{
+/* .landing{
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-}
+} */
 
 
 input[type="text"]{
-    width: 25rem;
+    width: 20rem;
+    background-color: white;
+    color: var(--purple);
+    border: none;
+    outline: none;
+    appearance: none;
+    border-radius: 8px;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    font-family: Roboto Condensed;
+    font-weight: 400;
+    letter-spacing: .05rem;
+    /* border-radius: 8px; */
+}
+
+input:focus[type="text"]{
+    border: 1px solid var(--purple);
+    background-color: black;
+    color: var(--green);
+}
+
+input[type="password"]{
+    width: 20rem;
+    border-radius: 8px;
     background-color: white;
     color: var(--purple);
     border: none;
