--- a/client/src/components/mostrarRestaurantes/ShowRestaurants.css
+++ b/client/src/components/mostrarRestaurantes/ShowRestaurants.css
@@ -22,13 +22,22 @@
   
   .card {
     flex: 0 0 auto;
-    width: 20rem; /* Ajusta el tamaño según tus necesidades */
+    width: 15rem; /* Ajusta el tamaño según tus necesidades */
     margin: 0 1rem;
+    background-color: white;
+    border-radius: 8px;
   }
   
   .scrollButton {
+    appearance: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
     font-size: 3rem;
-    background-color: #007bff;
+    background-color: var(--purple);
     color: white;
     border: none;
     cursor: pointer;
