--- a/client/src/home/Hero.css
+++ b/client/src/home/Hero.css
@@ -1,8 +1,7 @@
 .containerHero{
-    border: 2px solid pink;
+    /* border: 2px solid pink; */
     width: 100%;
     height: 100%;
-    padding-top: 3rem;
     display: flex;
     align-items: center;
     justify-content:center;
@@ -10,26 +9,26 @@
 }
 
 .hero{
-    border: 2px solid white;
+    /* border: 2px solid white; */
     width: 50%;
     height: 100%;
     display: flex;
-    align-items: center;    
-    justify-content:center; 
+    align-items: center;
+    justify-content:center;
     flex-direction: column;
     gap: 3rem;
     padding-right: 3rem;
 }
 
 .heroLoadedComponents{
-    border: 2px solid rgb(122, 122, 122);
-    padding-left: 5rem;
-    padding-right: 5rem;
+    /* border: 2px solid rgb(122, 122, 122); */
+    padding-left: 3rem;
+    padding-right: 3rem;
     width: 50%;
+    height: 85vh;
     display: flex;
     align-items: center;
-    justify-content:center; 
-    /* overflow-x: hidden  ; */
+    justify-content:center;
 }
 
 
@@ -50,7 +49,7 @@
     font-family: Alegreya;
     font-size: 4rem;
     font-weight: 600;
-    color: white;   
+    color: white;
     line-height: 4.8rem;
 }
 
