--- a/client/src/navbar/Navbar.css
+++ b/client/src/navbar/Navbar.css
@@ -1,11 +1,12 @@
 .containerNavbar{
     /* border: 2px solid var(--green); */
     width: 100%;
+    height: 15vh;
     display: flex;
     align-items: center; 
     justify-content:space-between;
     padding: 1.5rem 7rem;
-    background: linear-gradient(to bottom, rgb(0, 0, 0),#0000002f);
+    background: linear-gradient(to bottom, rgba(170, 241, 4, 0.253) 10%, #00000000);
     transition: all 200ms ease;
 }
 
@@ -18,7 +19,6 @@
     font-size: 2.7rem;
     font-weight: 700;
     letter-spacing: .1rem;
-    /* text-shadow: 1px 0px white; */
     color: var(--green);
     font-family: Alegreya;
 }
@@ -49,17 +49,17 @@
     padding: .5rem .7rem;
     font-size: 1.2rem;
     font-weight: 700;
-    letter-spacing: .05rem;
-    color: black;
+    letter-spacing: .07rem;
+    color: white;
     /* text-shadow: 1px 1px black; */
-    background-color: var(--green);
+    background-color: var(--purple);
     border-radius: 22px;
     transition: all 200ms ease;
 }
 
 .empezarBtn:hover{
     color: white;
-    outline: 1px solid var(--purple);
+    outline: 1px solid var(--green);
     background-color: black;
     border-radius: 8px;
 }
