--- a/client/src/navbar/RestaurantSearchBar.css
+++ b/client/src/navbar/RestaurantSearchBar.css
@@ -17,50 +17,44 @@
  justify-content: center;
   }
   
-  .inputSearchBar {
-    width: 30rem;
-    appearance: none;
-    outline: none;
+  input[type="text"]{
+    width: 20rem;
+    height: 3rem;
+    background-color: white;
+    color: var(--purple);
     border: none;
+    outline: none;
+    appearance: none;
+    border-radius: 8px;
+    padding: .5rem 1rem;
+    font-size: 1rem;
+    font-family: Roboto Condensed;
+    font-weight: 400;
+    letter-spacing: .05rem;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 8px;
-    background-color: white;
-    border-top-left-radius: 8px;
-    padding: 0.5rem .5rem;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 400;
-    letter-spacing: 0.05rem;
-    box-shadow: 0 4px 6px rgba(240, 77, 77, 0.1);
-    transition: all 150ms ease;
- 
-  }
-  
-  /* .inputSearch:focus {
-    outline: none;
-    border: none;
-    background-color: white;
-    outline: 1px solid var(--purple);
-  } */
-/*   
-  .searchResultItem {
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-  }
-  
-  .searchResultItem:hover {
-    background-color: #f0f0f0;
-  } */
+    /* border-radius: 8px; */
+}
+
+input:focus[type="text"]{
+    border: 1px solid var(--purple);
+    background-color: black;
+    color: var(--green);
+}
+
+
   
   .btnTrash{
+    width: 3rem;
+    height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     border: none;
     outline: none;
-    padding: 0.45rem 1rem;
-    font-size: 1.3rem;
+    padding: .5rem .5rem;
+    font-size: 1.4rem;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     color: white;
