--- a/client/src/home/Hero.css
+++ b/client/src/home/Hero.css
@@ -31,6 +31,14 @@
     justify-content:center;
 }
 
+.loaded{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+}
+
 
 .sub{
     display: flex;
