--- a/client/src/components/reserva/reservaCliente.module.css
+++ b/client/src/components/reserva/reservaCliente.module.css
@@ -1,15 +1,15 @@
 .container{
-    position: absolute;
+    /* position: absolute; */
     width: 50%;
-    height: 100vh;
-    z-index: 50;
+    /* height: 100vh; */
+    /* z-index: 50;
     top: 0;
-    right: 0;
+    right: 0; */
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 5rem;
-    background: linear-gradient(to right, #00000000, #000000c7 85%, #000000b6 95%);
+    /* background: linear-gradient(to right, #00000000, #000000c7 85%, #000000b6 95%); */
 }
 
 .containerReservaCliente{
